# signalf1

./: ANALYSIS.md  LICENSE  NOTES.md  README.md  pyproject.toml
data/: README.md
data/belgian_gp_2024_race/: CurrentTyres.json  DriverList.json  DriverRaceInfo.json  RaceControlMessages.json  SessionData.json  SessionInfo.json  TeamRadio_json  TimingDataF1_json  TrackStatus_jsonStream  TyreStintSeries_json  WeatherDataSeries_json  WeatherData_json
data/f1_data_20240721hungariangrandprix_qualifying/: current_tyres.json  download_summary.json  driver_list.json  race_control_messages.json  session_data.json  session_info.json  session_status.json  team_radio.json  timing_data.json  track_status.json  tyre_stints.json  weather_data.json  weather_series.json
samples/: complete_driver_44_example.py  debug_compression.py  driver_18_full_telemetry.json  driver_44_telemetry.json  driver_44_throttle_data.json  driver_44_throttle_detailed.json  driver_44_throttle_guide.py  enhanced_telemetry_extractor.py  example_usage.py  extract_driver_44_throttle.py  f1_endpoints_reality.py  f1_telemetry_examples.py  f1_telemetry_summary.py  lewis_hamilton_qualifying_speed_analysis.py  lewis_hamilton_race_analysis.py  lewis_hamilton_speed_analysis.py  official_f1_telemetry_downloader.py  plot_driver_speed.py  simple_f1_downloader.py  simple_f1_telemetry_downloader.py  test_extractor.py  visualization_example.py
signalf1/: README.md  pyproject.toml
src/signalf1/: __init__.py  __main__.py  _client.py  (+5 more)
telemetry/: README.md  __main__.py  pyproject.toml
tests/: client_test.py  extractor_test.py
(+12 files in other folders)
